--- a/projectdata/index.html
+++ b/projectdata/index.html
@@ -11,7 +11,7 @@
   <script src="https://kit.fontawesome.com/a168c4334b.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <!-- CSS LINK -->
-  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="/styles/style.css">
 
 
 </head>
@@ -24,10 +24,10 @@
         <i class="fas fa-times close-btn"></i>
       </div>
       <a href="#home" class="active ">Home</a>
-      <a href="#">About Us</a>
+      <a href="#about-us">About Us</a>
       <a href="#contact-us">Contact Us</a>
-      <a href="signup.html">Sign Up</a>
-      <a href="login.html">Login</a>
+      <a href="/api/user/register">Sign Up</a>
+      <a href="/api/user/login">Login</a>
     </nav>
     <div class="btn">
       <i class="fas fa-bars menu-btn"></i>
@@ -60,7 +60,7 @@
   
  <!-- About Us -->
  <div class="container">
- <div class="about-us contact_data" id="contact-us" >
+ <div class="about-us contact_data" id="about-us" >
   <h2>About Us</h2>
   <ul>
     <li>Abdul Rehman - Developer</li>
@@ -73,7 +73,7 @@
   </div>
 </div>
   <!-- Contact Us -->
-  <div class="container">
+  <div class="container " id="contact-us">
     <div class="contact_data2">
       <ul>
         <li>
@@ -114,7 +114,7 @@
       </form>
     </div>
   </div>
-  <script src="js/script.js"></script>
+  <script src="/js/script.js"></script>
 </body>
 
 </html>
